fix spacing

--- a/Spotify-Project/frontend/src/pages/LikedSongs.css
+++ b/Spotify-Project/frontend/src/pages/LikedSongs.css
@@ -71,8 +71,8 @@ body {
   font-size: 3rem;
   font-weight: 700;
   margin: 0;
-  margin-bottom: 1rem;
-margin-top: 1rem;
+  margin-bottom: 0.8rem;
+  margin-top: 0.8rem;
   color: #223;
 }
 
